dt-bindings: spi: Add property for Synopsys DesignWare SPI
Issue: #MCOM03SW-1636
Issue: #MCOM03-1879
Change-Id: I9f8853698243f42dd8d1633bee8fc34705517e92
Signed-off-by: Oleg Ivanov <oaivanov@elvees.com>

--- a/Documentation/devicetree/bindings/spi/snps,dw-apb-ssi.yaml
+++ b/Documentation/devicetree/bindings/spi/snps,dw-apb-ssi.yaml
@@ -99,6 +99,10 @@ properties:
     default: 4
     enum: [ 2, 4 ]
 
+  snps,fifo-size:
+    $ref: /schemas/types.yaml#/definitions/uint32
+    description: Size of the RX and TX FIFO.
+
   num-cs:
     default: 4
     minimum: 1
@@ -162,6 +166,7 @@ examples:
       num-cs = <2>;
       cs-gpios = <&gpio0 13 0>,
                  <&gpio0 14 0>;
+      snps,fifo-size = <63>;
       rx-sample-delay-ns = <3>;
       spi-flash@1 {
         compatible = "spi-nand";
